--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.3",
         "doctrine/dbal": "^2.5",
+        "hanson/face": "^2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
